--- a/frontend/cabmanager/src/css/adminHomepage.module.css
+++ b/frontend/cabmanager/src/css/adminHomepage.module.css
@@ -1,65 +1,71 @@
 body {
-    font-family: "Lato", sans-serif;
-    background-image: url("../../public/cab_pic_ai.png");
-   
-  }
-  
+  font-family: "Lato", sans-serif;
+  background-image: url("../../public/cab_pic_ai.png");
+
+}
+
+.sidebar {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: yellow;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidebar div {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: black;
+  display: block;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  /* Added box-shadow */
+  cursor: pointer;
+}
+
+.sidebar div:hover {
+  color: blue;
+}
+
+.sidebar .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+  cursor: pointer;
+}
+
+.openbtn {
+  font-size: 20px;
+  cursor: pointer;
+  background-color: yellow;
+  color: black;
+  padding: 10px 15px;
+  border: 10px;
+}
+
+.openbtn:hover {
+  background-color: #444;
+}
+
+#main {
+  transition: margin-left .5s;
+  padding: 16px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
   .sidebar {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: yellow;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
+    padding-top: 15px;
   }
-  
-  .sidebar div {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: black;
-    display: block;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); /* Added box-shadow */
-    cursor: pointer;
+
+  .sidebar button {
+    font-size: 18px;
   }
-  
-  .sidebar div:hover {
-    color: blue;
-  }
-  
-  .sidebar .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-    cursor:pointer;
-  }
-  
-  .openbtn {
-    font-size: 20px;
-    cursor: pointer;
-    background-color: yellow;
-    color: black;
-    padding: 10px 15px;
-    border: ;
-  }
-  
-  .openbtn:hover {
-    background-color: #444;
-  }
-  
-  #main {
-    transition: margin-left .5s;
-    padding: 16px;
-  }
-  
-  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-  @media screen and (max-height: 450px) {
-    .sidebar {padding-top: 15px;}
-    .sidebar button {font-size: 18px;}
-  }
+}
