--- a/frontend/cabmanager/src/css/adminHomepage.module.css
+++ b/frontend/cabmanager/src/css/adminHomepage.module.css
@@ -6,15 +6,17 @@ body {
 
 .sidebar {
   height: 100%;
-  width: 0;
+  width: 250px;
   position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
   background-color: yellow;
+  opacity: 0.9;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
+  display: block;
 }
 
 .sidebar div {
@@ -39,6 +41,7 @@ body {
   font-size: 36px;
   margin-left: 50px;
   cursor: pointer;
+
 }
 
 .openbtn {
@@ -60,9 +63,12 @@ body {
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
+@media screen and  (max-width:1250px) {
   .sidebar {
-    padding-top: 15px;
+
+  width: 100%;
+    text-align: center;
+    display: block;
   }
 
   .sidebar button {
