--- a/frontend/cabmanager/src/css/adminHomepage.module.css
+++ b/frontend/cabmanager/src/css/adminHomepage.module.css
@@ -1,7 +1,6 @@
 body {
   font-family: "Lato", sans-serif;
   background-image: url("../../public/cab_pic_ai.png");
-
 }
 
 .sidebar {
@@ -11,7 +10,7 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: yellow;
+  background-color: rgb(255, 255, 83);
   opacity: 0.9;
   overflow-x: hidden;
   transition: 0.5s;
@@ -47,7 +46,7 @@ body {
 .openbtn {
   font-size: 20px;
   cursor: pointer;
-  background-color: yellow;
+  background-color: rgb(255, 255, 83);
   color: black;
   padding: 10px 15px;
   border: 10px;
@@ -55,6 +54,7 @@ body {
 
 .openbtn:hover {
   background-color: #444;
+  color: beige;
 }
 
 #main {
@@ -63,10 +63,9 @@ body {
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and  (max-width:1250px) {
+@media screen and (max-width:1250px) {
   .sidebar {
-
-  width: 100%;
+    width: 100%;
     text-align: center;
     display: block;
   }
