changed background,created backup functionality.

--- a/frontend/cabmanager/src/css/adminHomepage.module.css
+++ b/frontend/cabmanager/src/css/adminHomepage.module.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Lato", sans-serif;
-  background-image: url("../../public/cab_pic_ai.png");
+  background-image: url("../../public/desktop_background.jpg");
 }
 
 .sidebar {
@@ -79,5 +79,12 @@ div.subMenuOptions {
 
   .sidebar button {
     font-size: 18px;
+  }
+}
+
+@media screen and (max-width:900px) {
+  body {
+    font-family: "Lato", sans-serif;
+    background-image: url("../../public/mobile_background.jpg");
   }
 }
